--- a/7_descriptives.Rmd
+++ b/7_descriptives.Rmd
@@ -444,6 +444,26 @@ temp17 <- left_join(loan_only, payroll, by = "zip") %>%
 temp17 %>%
   summarize(n = n(), mean = mean(payroll), sd = sd(payroll))
 ```
+```{r}
+# Calculating lender stuff
+
+loan_only %>%
+    mutate(lender = tolower(lender)) %>%
+    mutate(national = 0) %>%
+    mutate(national = ifelse(str_detect(lender, pattern = "national association"),
+                           1, national),
+         national = ifelse(str_detect(lender, pattern = "n.a."),
+                           1, national)) %>%
+   mutate(cu = 0) %>%
+   mutate(cu = ifelse(str_detect(lender, pattern = "\\sfcu$"), 1, 
+                              cu),
+         cu = ifelse(str_detect(lender, pattern = "\\scu$"), 1, 
+                              cu),
+         cu = ifelse(str_detect(lender, pattern = "credit union"), 1, 
+                              cu)) %>%
+  summarize(mean1 = mean(national), sd1 = sd(national),
+            mean2 = mean(cu), sd2 = sd(cu))
+```
 
 
 ```{r}
